Bug 359045 - Unable to set a color background
Summary: Unable to set a color background
Status: RESOLVED FIXED
Alias: None
Product: klickety
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: nihui
URL:
Keywords:
: 359044 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-05 23:20 UTC by André Marcelo Alvarenga
Modified: 2016-02-24 02:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-02-05 23:20:27 UTC
Go to Settings -> Configure Klickety...
Click on Background page
Try to choose a different color and apply the changes.

Reproducible: Always
Comment 1 Frederik Schwarzer 2016-02-08 16:05:38 UTC
*** Bug 359044 has been marked as a duplicate of this bug. ***
Comment 2 Frederik Schwarzer 2016-02-08 16:08:57 UTC
This is partly a regression that was introduced during the KF5 port. Partly because the KDE 4 behaviour is kind of erratic already (background colour shown but theme selected in dialog).

I really have to dig into the KConfig dialogue. Several games do have problems with it.
Comment 3 Frederik Schwarzer 2016-02-24 02:33:32 UTC
Git commit 68bd2b02ce2cfe9e320587f46584843d70f847f5 by Frederik Schwarzer.
Committed on 24/02/2016 at 02:32.
Pushed by schwarzer into branch 'master'.

Fix background config dialog page.

I could not make it work with the Enum so I used hree Bools instead.
It's more ugly this way (code-wise) and if someone knows how to make the
Enum work, please speak up.

Thanks André Marcelo Alvarenga for the report.

M  +10   -10   bgselectorconfig.ui
M  +30   -41   gamescene.cpp
M  +8    -8    klickety.kcfg
M  +11   -1    mainwindow.cpp

http://commits.kde.org/klickety/68bd2b02ce2cfe9e320587f46584843d70f847f5