Fix background config dialog page.

I could not make it work with the Enum so I used hree Bools instead.
It's more ugly this way (code-wise) and if someone knows how to make the
Enum work, please speak up.

BUG: 359045

Thanks André Marcelo Alvarenga for the report.