mainwindow.cpp
@@ -123,7 +123,17 @@ void MainWindow::loadSettings()
     m_scene->setShowBoundLines( Settings::showBoundLines() );
     m_scene->setEnableAnimation( Settings::enableAnimation() );
     m_scene->setEnableHighlight( Settings::enableHighlight() );
-    m_scene->setBackgroundType( Settings::bgType() );
+    int bgType;
+    if ( Settings::radioTheme() == true ) {
+        bgType = 0;
+    }
+    if ( Settings::radioColor() == true ) {
+        bgType = 1;
+    }
+    if ( Settings::radioImage() == true ) {
+        bgType = 2;
+    }
+    m_scene->setBackgroundType( bgType );
 }
 
 void MainWindow::newGame( int gameId )
